/**
* Channel Data
* Author: Justin Kimbrell (Objective HTML)
* Version: 0.4.2
* Build: 20111214
* Copyright 2011 - All rights reserved
* http://objectivehtml.com
*/

Version 0.4.2 - 12/14/2011
--------------------------
Paying a lot of attention to the polymorphic parameters and removing any bugs I can find. Also added complex conditionals and added "AND/OR" clauses to WHERE statements.

Version 0.4.1 - 12/13/2011
--------------------------
Rewrote the logic behind the where conditional element and how it's passed to Active Record. Fixed bugs that prevented OR and AND clauses from working correctly.

Version 0.4.0 - 12/09/2011
--------------------------
Officially appended a BSD license to the library making it free and open to use for the life of the project.

Version 0.3.7 - 12/08/2011
--------------------------
Bug fixed that prevented the polymorphic parameters from working when the select and where parameters aren't present.

Version 0.3.6 - 12/08/2011
--------------------------
Added two new methods: get_actions() and get_action_id() to quickly get one or more action ids.

Version 0.3.5 - 11/30/2011
--------------------------
Lots of bug fixes and code optimization. Stable release 1.0 release is starting to take shape. No major API changes for a while, and doesn't appear to need any. Every method has been tested at least once, but bugs could still be present.

Version 0.3.4 - 11/15/2011
--------------------------
Bug fixes

Version 0.3.3 - 11/11/2011
--------------------------
Bug fixed that prevented the get_channel_entry() method from working correctly

Version 0.3.2 - 11/08/2011
--------------------------
Bug fixes within some of the polymorphic properties

Version 0.3.1 - 11/07/2011
--------------------------
Added a new method: get_channel_by_name(). I got tired of typing a long syntax for something I wanted to very frequently. Also updated the documentation, hopefully it's a litter easier to read.

Version 0.3.0 - 11/02/2011
-------------------------