@@ -1,7 +1,7 @@
 Channel Data
 ============
 
-### Version 0.4.2 - 20111214
+### Version 0.5.1 - 20111219
 
 #### By Justin Kimbrell / Objective HTML
 
